deploy/psjr-front/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: psjr-front
    project: marketing
    buildNumber: '$BUILD_NUMBER'
  name: psjr-front
  namespace: marketing
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: psjr-front
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        prometheus.io/port: '3000'
        prometheus.io/scrape: 'true'
      labels:
        app: psjr-front
        project: marketing
    spec:
      containers:
        - image: aviasales/psjr-front:$BRANCH-$BUILDNUMBER
          imagePullPolicy: Always
          name: psjr-front
          ports:
            - containerPort: 3000
              name: psjr-front
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          resources:
            limits:
              memory: 4Gi
              cpu: '2'
            requests:
              cpu: '1'
              memory: 2Gi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /readyz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 1
            timeoutSeconds: 1
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: $KUBERNETES_SECRET_NAME
      nodeSelector:
        kubernetes.io/role: other
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
