deploy/psjr-front/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: psjr-front
  name: psjr-front
  namespace: marketing
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: psjr-front
  sessionAffinity: None
  type: ClusterIP
